deployment/manifests/dev-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      imagePullSecrets:
        - name: cerit-io-harbor-accesstoken
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: prod-app
          image: cerit.io/design-system/app:dev
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: probe-port
              containerPort: 80
          resources:
            limits:
              memory: "6Gi"
              cpu: "2"
            requests:
              memory: "3Gi"
              cpu: "2"
