deployment/manifests/storybook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-storybook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-storybook
  template:
    metadata:
      labels:
        app: prod-storybook
    spec:
      imagePullSecrets:
        - name: cerit-io-harbor-accesstoken
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: prod-storybook
          image: cerit.io/design-system/storybook:prod
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: probe-port
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /
              port: probe-port
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /
              port: probe-port
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: probe-port
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              memory: "1Gi"
              cpu: "0.5"
            requests:
              memory: "512Mi"
              cpu: "0.25"
