deployment/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: prod-app
