deployment/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: designsystem-app-prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: designsystem-app-prod
