deployment/manifests/storybook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: designsystem-storybook-prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: designsystem-storybook-prod
