deployment/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "design-system.e-infra.cz"
      secretName: design-system-e-infra-cz-tls
  rules:
    - host: "design-system.e-infra.cz"
      http:
        paths:
          - path: /storybook
            pathType: Prefix
            backend:
              service:
                name: prod-storybook
                port:
                  number: 80
          - path: /sb-addons
            pathType: Prefix
            backend:
              service:
                name: prod-storybook
                port:
                  number: 80
          - path: /sb-manager
            pathType: Prefix
            backend:
              service:
                name: prod-storybook
                port:
                  number: 80
          - path: /sb-preview
            pathType: Prefix
            backend:
              service:
                name: prod-storybook
                port:
                  number: 80
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: prod-storybook
                port:
                  number: 80
          - path: /iframe.html
            pathType: Exact
            backend:
              service:
                name: prod-storybook
                port:
                  number: 80
          - path: /index.json
            pathType: Exact
            backend:
              service:
                name: prod-storybook
                port:
                  number: 80
          - path: /project.json
            pathType: Exact
            backend:
              service:
                name: prod-storybook
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-app
                port:
                  number: 80
